syntax = "proto3";
import "Player.Proto";

//登录协议请求，1001001
message CSLoginReq{
       string userAccount = 1;   //登录账号
}

//登录协议返回,2001001
message SCLoginRes{
       PlayerData playerData = 1;  //玩家数据
       int32 timestamp = 2;     //登录进服务器的时间戳
}